--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -19,7 +19,7 @@ phases:
     commands:
       # - echo testing...
       # - echo building...
-      - ng build --prod
+      - npm run build --prod
 artifacts:
   files:
     - "**/*"
