--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -2,8 +2,10 @@ version: 0.1
 
 phases:
   install:
-  runtime-versions:
-    nodejs: 16.x
+    commands:
+      - echo installing nodejs...
+      - curl -sL https://deb.nodesource.com/setup_18.x | bash -
+      - apt-get install -y nodejs
   pre_build:
     commands:
       - echo installing dependencies...
